--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "python-dotenv (>=1.1.0,<2.0.0)",
-    "telebot (>=0.0.5,<0.0.6)"
+    "telebot (>=0.0.5,<0.0.6)",
+    "pandas (>=2.2.3,<3.0.0)"
 ]
 
 
