--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
     "pytz (>=2025.2,<2026.0)",
     "imaplib2 (>=3.6,<4.0)",
-    "python-dateutil (>=2.9.0.post0,<3.0.0)"
+    "python-dateutil (>=2.9.0.post0,<3.0.0)",
+    "openpyxl (>=3.1.5,<4.0.0)"
 ]
 
 
